Fix C-j binding in gtk
A bit hackish, but makes sure the cursor doesn't go out of view.

--- a/gtk/.config/gtk-3.0/gtk.css
+++ b/gtk/.config/gtk-3.0/gtk.css
@@ -2,5 +2,7 @@
 {
   bind "<alt>h" { "delete-from-cursor" (word-ends, -1) };
   bind "<alt>BackSpace" { "delete-from-cursor" (word-ends, -1) };
-  bind "<ctrl>j" { "insert-at-cursor" ("\n") };
+  bind "<ctrl>j" { "insert-at-cursor" ("\n")
+		   "move-cursor" (logical-positions, -1, 0)
+		   "move-cursor" (logical-positions, 1, 0) };
 }
